2006-04-30  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* virtman.sh: New file
	* Makefile, README, slack-desc: + virtman.sh added

2006-04-29  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* ivona.sh: + added -R switch
	+ added configuration file
	+ ivonka -> ivona
	+ added configurable sed script
	+ exec added

	* ivona.sh: New file
	* Makefile, README, slack-desc: + ivona.sh added

	* getlyrics.pl: + --mpd and --pipe options added

------- New Release ----------------------------------------------------------

2006-04-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* FvwmTransFocus: + error messages are printed only when debug's on

	* Makefile: + FvwmTransFocus installer added

	* slack-desc: + new applications added

	* quotes.txt: + new quote from IRC

	* README: + justification fixed

	* Makefile: + mountiso and umountiso are installd in /usr/bin
	+ games are installed in /usr/local/games
	+ DEBUG added

	* mpd-show.c: + division by 0 when unknown total length bug fixed

2006-04-25  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* extractlinks.pl: + supports '-' as standard input.
	+ supports multiple tags in --tag
	+ supports printing relative links

2006-04-19  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel.8: + few typos corrected
	+ '--arch=-' and '--nice=!<value>' options documented
	+ Note when '--tidy' is not recommedned added
	+ global hook scripts now in /etc/installkernel.d/global

	* installkernel: + `ps -p` replaced with `kill -0`
	+ checking for another instance with `ps -C` added
	+ '--arch=-' option added
	+ '--nice=!<value>' option added
	+ uses `renice` instead of `nice` now
	+ global hook scripts now in /etc/installkernel.d/global

2006-03-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel: + bug with tr introduced in prev. ver. fixed

2006-03-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel, mp3rip: + ranges in tr replaced with listed values

	* quotes.txt: + The Godfather quotes added
	+ Randy Keith Milholland quotes added
